--- a/app/src/main/res/layout/fragment_medicines.xml
+++ b/app/src/main/res/layout/fragment_medicines.xml
@@ -59,6 +59,7 @@
 
     <TextView
         style="@style/zagalovok2"
+        android:id="@+id/nothingThere"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
@@ -80,7 +81,8 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            >
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerViewMedicines"
@@ -89,6 +91,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingBottom="80dp"
                 />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -101,7 +104,7 @@
         app:layout_constraintStart_toStartOf="@id/margin_medicines"
         app:layout_constraintEnd_toEndOf="@id/margin_margin_medicines2"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="15dp">
+        android:layout_marginBottom="10dp">
 
         <ImageButton
             android:id="@+id/addNewMedicines"
