--- a/app/src/main/res/layout/fragment_heart.xml
+++ b/app/src/main/res/layout/fragment_heart.xml
@@ -19,7 +19,7 @@
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/margin_main"
-                android:layout_widчth="0dp"
+                android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:orientation="vertical"
                 app:layout_constraintGuide_begin="15dp"
