--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -40,7 +40,7 @@
                 app:layout_constraintStart_toStartOf="@id/margin_main"
                 app:layout_constraintTop_toTopOf="parent"
                 android:src="@drawable/settings"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="33dp"
                 />
 
             <ImageButton
@@ -220,6 +220,16 @@
                     app:layout_constraintBottom_toBottomOf="@id/medicineiesBox2"
                     android:layout_marginStart="20dp"
                     android:text="@string/preparations"
+                    />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginEnd="15dp"
+                    android:src="@drawable/medecines_icon"
                     />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
