--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -155,4 +155,24 @@
             android:id="@+id/action_addMedicinesFragment_to_profileFragment"
             app:destination="@id/profileFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/startFragment_1"
+        android:name="com.example.healthcheck.view.StartFragment_1"
+        android:label="fragment_start_1"
+        tools:layout="@layout/fragment_start_1" />
+    <fragment
+        android:id="@+id/startFragment_2"
+        android:name="com.example.healthcheck.view.StartFragment_2"
+        android:label="fragment_start_2"
+        tools:layout="@layout/fragment_start_2" />
+    <fragment
+        android:id="@+id/startFragment_3"
+        android:name="com.example.healthcheck.view.StartFragment_3"
+        android:label="fragment_start_3"
+        tools:layout="@layout/fragment_start_3" />
+    <fragment
+        android:id="@+id/startFragment2"
+        android:name="com.example.healthcheck.view.StartFragment"
+        android:label="fragment_start"
+        tools:layout="@layout/fragment_start" />
 </navigation>
