--- a/app/src/main/res/layout/fragment_start_2.xml
+++ b/app/src/main/res/layout/fragment_start_2.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".view.StartFragment_2"
+    tools:context=".view.StartFragment2"
     android:background="@drawable/background"
     >
 
