--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -38,6 +38,7 @@
         />
 
     <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewPagerStart"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintStart_toStartOf="@id/margin_main1"
