--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation_graph"
-    app:startDestination="@id/mainFragment">
+    app:startDestination="@id/startFragment">
 
     <fragment
         android:id="@+id/startFragment"
@@ -170,9 +170,4 @@
         android:name="com.example.healthcheck.view.StartFragment3"
         android:label="fragment_start_3"
         tools:layout="@layout/fragment_start_3" />
-    <fragment
-        android:id="@+id/startFragment2"
-        android:name="com.example.healthcheck.view.StartFragment"
-        android:label="fragment_start"
-        tools:layout="@layout/fragment_start" />
 </navigation>
