--- a/app/src/main/res/layout/fragment_weight.xml
+++ b/app/src/main/res/layout/fragment_weight.xml
@@ -158,39 +158,44 @@
                     android:layout_marginTop="7dp"
                     />
 
-                <ImageView
-                    android:id="@+id/weightDiagramWeek"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                <ProgressBar
+                    style="?android:attr/progressBarStyleHorizontal"
+                    android:id="@+id/progressBarWeightWeek"
+                    android:layout_width="105dp"
+                    android:layout_height="105dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    android:src="@drawable/diagram_cycle"
-                    app:layout_constraintVertical_bias="0.5"
+                    android:background="@drawable/circle_background"
+                    android:progressDrawable="@drawable/circle_progress"
+                    android:indeterminate="false"
+                    android:max="100"
+                    android:progress="1"
+                    app:layout_constraintVertical_bias="0.6"
                     />
 
                 <TextView
                     style="@style/diagramsDigitsStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintStart_toStartOf="@id/weightDiagramWeek"
-                    app:layout_constraintEnd_toEndOf="@id/weightDiagramWeek"
-                    app:layout_constraintBottom_toBottomOf="@id/weightDiagramWeek"
-                    app:layout_constraintTop_toTopOf="@id/weightDiagramWeek"
+                    app:layout_constraintStart_toStartOf="@id/progressBarWeightWeek"
+                    app:layout_constraintEnd_toEndOf="@id/progressBarWeightWeek"
+                    app:layout_constraintBottom_toBottomOf="@id/progressBarWeightWeek"
+                    app:layout_constraintTop_toTopOf="@id/progressBarWeightWeek"
                     android:text="\?"
-                    app:layout_constraintVertical_bias="0.4"
+                    app:layout_constraintVertical_bias="0.3"
                     />
 
                 <TextView
                     style="@style/diagramsTextStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintStart_toStartOf="@id/weightDiagramWeek"
-                    app:layout_constraintEnd_toEndOf="@id/weightDiagramWeek"
-                    app:layout_constraintBottom_toBottomOf="@id/weightDiagramWeek"
-                    app:layout_constraintTop_toTopOf="@id/weightDiagramWeek"
-                    app:layout_constraintVertical_bias="0.65"
+                    app:layout_constraintStart_toStartOf="@id/progressBarWeightWeek"
+                    app:layout_constraintEnd_toEndOf="@id/progressBarWeightWeek"
+                    app:layout_constraintBottom_toBottomOf="@id/progressBarWeightWeek"
+                    app:layout_constraintTop_toTopOf="@id/progressBarWeightWeek"
+                    app:layout_constraintVertical_bias="0.55"
                     android:text="@string/kg"
                     />
 
@@ -198,11 +203,11 @@
                     style="@style/diagramsTextStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintStart_toStartOf="@id/weightDiagramWeek"
-                    app:layout_constraintEnd_toEndOf="@id/weightDiagramWeek"
-                    app:layout_constraintBottom_toBottomOf="@id/weightDiagramWeek"
-                    app:layout_constraintTop_toTopOf="@id/weightDiagramWeek"
-                    app:layout_constraintVertical_bias="0.85"
+                    app:layout_constraintStart_toStartOf="@id/progressBarWeightWeek"
+                    app:layout_constraintEnd_toEndOf="@id/progressBarWeightWeek"
+                    app:layout_constraintBottom_toBottomOf="@id/progressBarWeightWeek"
+                    app:layout_constraintTop_toTopOf="@id/progressBarWeightWeek"
+                    app:layout_constraintVertical_bias="0.75"
                     android:text="@string/average"
                     />
 
@@ -261,39 +266,44 @@
                     android:layout_marginTop="7dp"
                     />
 
-                <ImageView
-                    android:id="@+id/weightDiagramMonth"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                <ProgressBar
+                    style="?android:attr/progressBarStyleHorizontal"
+                    android:id="@+id/progressBarWeightMonth"
+                    android:layout_width="105dp"
+                    android:layout_height="105dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    android:src="@drawable/diagram_cycle"
-                    app:layout_constraintVertical_bias="0.5"
+                    android:background="@drawable/circle_background"
+                    android:progressDrawable="@drawable/circle_progress"
+                    android:indeterminate="false"
+                    android:max="100"
+                    android:progress="1"
+                    app:layout_constraintVertical_bias="0.6"
                     />
 
                 <TextView
                     style="@style/diagramsDigitsStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintStart_toStartOf="@id/weightDiagramMonth"
-                    app:layout_constraintEnd_toEndOf="@id/weightDiagramMonth"
-                    app:layout_constraintBottom_toBottomOf="@id/weightDiagramMonth"
-                    app:layout_constraintTop_toTopOf="@id/weightDiagramMonth"
+                    app:layout_constraintStart_toStartOf="@id/progressBarWeightMonth"
+                    app:layout_constraintEnd_toEndOf="@id/progressBarWeightMonth"
+                    app:layout_constraintBottom_toBottomOf="@id/progressBarWeightMonth"
+                    app:layout_constraintTop_toTopOf="@id/progressBarWeightMonth"
                     android:text="\?"
-                    app:layout_constraintVertical_bias="0.4"
+                    app:layout_constraintVertical_bias="0.3"
                     />
 
                 <TextView
                     style="@style/diagramsTextStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintStart_toStartOf="@id/weightDiagramMonth"
-                    app:layout_constraintEnd_toEndOf="@id/weightDiagramMonth"
-                    app:layout_constraintBottom_toBottomOf="@id/weightDiagramMonth"
-                    app:layout_constraintTop_toTopOf="@id/weightDiagramMonth"
-                    app:layout_constraintVertical_bias="0.65"
+                    app:layout_constraintStart_toStartOf="@id/progressBarWeightMonth"
+                    app:layout_constraintEnd_toEndOf="@id/progressBarWeightMonth"
+                    app:layout_constraintBottom_toBottomOf="@id/progressBarWeightMonth"
+                    app:layout_constraintTop_toTopOf="@id/progressBarWeightMonth"
+                    app:layout_constraintVertical_bias="0.55"
                     android:text="@string/kg"
                     />
 
@@ -301,11 +311,11 @@
                     style="@style/diagramsTextStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintStart_toStartOf="@id/weightDiagramMonth"
-                    app:layout_constraintEnd_toEndOf="@id/weightDiagramMonth"
-                    app:layout_constraintBottom_toBottomOf="@id/weightDiagramMonth"
-                    app:layout_constraintTop_toTopOf="@id/weightDiagramMonth"
-                    app:layout_constraintVertical_bias="0.85"
+                    app:layout_constraintStart_toStartOf="@id/progressBarWeightMonth"
+                    app:layout_constraintEnd_toEndOf="@id/progressBarWeightMonth"
+                    app:layout_constraintBottom_toBottomOf="@id/progressBarWeightMonth"
+                    app:layout_constraintTop_toTopOf="@id/progressBarWeightMonth"
+                    app:layout_constraintVertical_bias="0.75"
                     android:text="@string/average"
                     />
 
