Сделал восстановление уведомлений после перезагрузки телефона, начал верстать editMedicinesFragment

--- a/app/src/main/res/layout/fragment_steps.xml
+++ b/app/src/main/res/layout/fragment_steps.xml
@@ -122,6 +122,7 @@
                     />
                 <TextView
                     style="@style/diagramsDigitsStyle"
+                    android:id="@+id/countOfStepsForWeekText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:layout_constraintStart_toStartOf="@id/stepsDiagram"
@@ -282,6 +283,7 @@
 
                 <EditText
                     style="@style/hint1"
+                    android:id="@+id/getCountOfSteps"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     app:layout_constraintStart_toStartOf="@id/steps_today"
@@ -289,7 +291,6 @@
                     app:layout_constraintBottom_toBottomOf="@id/steps_today"
                     app:layout_constraintEnd_toEndOf="@id/steps_today"
                     android:hint="@string/input_steps"
-                    android:textColor="@color/tint_color"
                     android:background="@android:color/transparent"
                     android:paddingStart="10dp"
                     />
@@ -331,6 +332,7 @@
 
                 <TextView
                     style="@style/zagalovok3"
+                    android:id="@+id/st5000_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:layout_constraintTop_toTopOf="@id/st5000"
@@ -366,6 +368,7 @@
 
                 <TextView
                     style="@style/zagalovok3"
+                    android:id="@+id/st15000Text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:layout_constraintTop_toTopOf="@id/st15000"
@@ -402,6 +405,7 @@
 
                 <TextView
                     style="@style/zagalovok3"
+                    android:id="@+id/st10000Text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:layout_constraintTop_toTopOf="@id/st10000"
@@ -409,6 +413,7 @@
                     app:layout_constraintStart_toStartOf="@id/st10000"
                     app:layout_constraintEnd_toEndOf="@id/st10000"
                     android:text="@string/steps10000"
+                    android:textColor="@color/textcolor_white"
                     />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
